# casacore

./: CMakeLists.txt
casa/Utilities/: Regex.h
casa/apps/: CMakeLists.txt
fits/apps/: CMakeLists.txt
images/apps/: CMakeLists.txt
measures/apps/: CMakeLists.txt
ms/apps/: CMakeLists.txt
msfits/apps/: CMakeLists.txt
tables/apps/: CMakeLists.txt
