foreach(prog findmeastable)
    add_executable (${prog}  ${prog}.cc)
    target_link_libraries (${prog} casa_measures ${CASACORE_ARCH_LIBS})
    if (DEFINED CMAKE_INSTALL_BINDIR)
        install(TARGETS ${prog} DESTINATION ${CMAKE_INSTALL_BINDIR})
    else()
        install(TARGETS ${prog} DESTINATION bin)
    endif()
endforeach(prog findmeastable)

add_executable (measuresdata  measuresdata/measuresdata.cc)
target_link_libraries (measuresdata casa_measures ${CASACORE_ARCH_LIBS})
if (DEFINED CMAKE_INSTALL_BINDIR)
    install(TARGETS measuresdata DESTINATION ${CMAKE_INSTALL_BINDIR})
    install(PROGRAMS measuresdata/measuresdata-update DESTINATION ${CMAKE_INSTALL_BINDIR})
else()
    install(TARGETS measuresdata DESTINATION bin)
    install(PROGRAMS measuresdata/measuresdata-update DESTINATION bin)
endif()
