foreach(prog msselect writems readms)
    add_executable (${prog}  ${prog}.cc)
    target_link_libraries (${prog} casa_ms ${CASACORE_ARCH_LIBS})
    if(MPI_FOUND)
        target_compile_definitions(${prog} PRIVATE HAVE_MPI)
        if(ADIOS2_FOUND)
            target_compile_definitions(${prog} PRIVATE HAVE_ADIOS2)
            target_include_directories(${prog} PRIVATE ${ADIOS2_INCLUDE_DIRS})
        endif(ADIOS2_FOUND)
    endif(MPI_FOUND)
    if(DEFINED CMAKE_INSTALL_BINDIR)
        install(TARGETS ${prog} DESTINATION ${CMAKE_INSTALL_BINDIR})
    else()
        install(TARGETS ${prog} DESTINATION bin)
    endif()
endforeach(prog msselect)
