foreach(prog ms2uvfits)
    add_executable (${prog}  ${prog}.cc)
    target_link_libraries (${prog} casa_msfits ${CASACORE_ARCH_LIBS})
    if (DEFINED CMAKE_INSTALL_BINDIR)
        install(TARGETS ${prog} DESTINATION ${CMAKE_INSTALL_BINDIR})
    else()
        install(TARGETS ${prog} DESTINATION bin)
    endif()
endforeach(prog ms2uvfits)
