foreach(prog showtableinfo showtablelock taql lsmf tomf tablefromascii)
    add_executable (${prog}  ${prog}.cc)
    target_link_libraries (${prog} casa_tables)
    if(DEFINED CMAKE_INSTALL_BINDIR)
        install(TARGETS ${prog} DESTINATION ${CMAKE_INSTALL_BINDIR})
    else()
        install(TARGETS ${prog} DESTINATION bin)
    endif()
endforeach()
